[package]
name = "crunch"
version = "0.0.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
publish = false
description = "An esoteric language written in Rust"
homepage = "https://github.com/Kixiron/crunch-lang"
repository = "https://github.com/Kixiron/crunch-lang"
readme = "README.md"
keywords = ["crunch", "language"]
categories = ["language"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"
default-run = "crunch"

[features]
default = []
# Note: JIT currently *highly* expiremental
jit = ["dynasm", "dynasmrt", "once_cell"]
fuzz = ["honggfuzz"]
stepping = []

[[bin]]
name = "crunch"
path = "src/bin.rs"

[[bench]]
name = "vm"
harness = false

[[bench]]
name = "garbage_collection"
harness = false

[[bench]]
name = "examples"
harness = false

[[bench]]
name = "compilation"
harness = false

[[bin]]
name = "fuzz_parser"
path = "fuzzing/parse.rs"
required-features = ["fuzz"]

[dependencies]
log = "0.4.8"
simple_logger = "1.5.0"
color-backtrace = "0.3.0"
array-init = "0.1.1"
structopt = "0.3.8"
codespan = "0.6.0"
codespan-reporting = "0.6.0"
human-panic = "1.0.1"
string-interner = "0.7.1"
lazy_static = "1.4.0"
num-bigint = "0.2.6"
fxhash = "0.2.1"

[dependencies.dlopen]
version = "0.1.8"

[dependencies.logos]
version = "0.10.0-rc2"

[dependencies.honggfuzz]
version = "0.5.45"
optional = true

[dependencies.once_cell]
version = "1.3.1"
optional = true

[dependencies.dynasm]
version = "0.5.2"
optional = true

[dependencies.dynasmrt]
version = "0.5.2"
optional = true

[dependencies.rand]
version = "0.7.3"
features = ["small_rng"]

[target.'cfg(target_family = "windows")'.dependencies]
winapi = "0.3.8"

[target.'cfg(target_family = "unix")'.dependencies]
libc = "0.2.66"

[dev-dependencies]
criterion = "0.3.1"
proptest = "0.9.5"

[build-dependencies]
cc = "1.0.50"

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/Kixiron/crunch-lang" }
is-it-maintained-open-issues = { repository = "https://github.com/Kixiron/crunch-lang" }
maintenance = { status = "experimental" }
