[package]
name = "crunch"
version = "0.0.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
publish = false
description = "An esoteric language written in Rust"
homepage = "https://github.com/Kixiron/crunch-lang"
repository = "https://github.com/Kixiron/crunch-lang"
readme = "README.md"
keywords = ["crunch", "language"]
categories = ["language"]
license = "MIT OR Apache-2.0"
edition = "2018"
build = "build.rs"
default-run = "crunch"

[features]
default = ["std"]
std = ["compactor/runtime"]

[[bin]]
name = "crunch"
path = "src/bin.rs"

[[bench]]
name = "compactor"
harness = false

[[bench]]
name = "examples"
harness = false

[[bench]]
name = "compilation"
harness = false

[dependencies.uuid]
default-features = false
features = ["v3"]
version = "0.8.1"

[dependencies.backtrace]
default-features = false
version = "0.3.45"

[dependencies.color-backtrace]
default-features = false
version = "0.3.0"

[dependencies.clap]
default-features = false
version = "2.33.0"

[dependencies.simple_logger]
default-features = false
version = "1.6.0"

[dependencies.ballast]
path = "crates/ballast"

[dependencies.crunch-error]
path = "crates/crunch-error"

[dependencies.crunch-parser]
path = "crates/crunch-parser"

[dependencies.vice]
path = "crates/vice"

[dependencies.compactor]
path = "crates/compactor"

[dependencies.crunch-bytecode]
path = "crates/crunch-bytecode"

[dev-dependencies]
criterion = "0.3.1"
proptest = "0.9.5"

[build-dependencies]
cc = "1.0.50"

[workspace]
members = [
    "crates/*"
]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
panic = 'unwind'
incremental = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 16
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/Kixiron/crunch-lang" }
is-it-maintained-open-issues = { repository = "https://github.com/Kixiron/crunch-lang" }
maintenance = { status = "experimental" }
