[package]
name = "crunch-fuzzing"
version = "0.0.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]

[[bin]]
name = "parser"
path = "src/parse.rs"

[[bin]]
name = "parser-afl"
path = "src/parse-afl.rs"

[dependencies.crunch-parser]
path = "../crates/crunch-parser"

[dependencies.parking_lot]
version = "0.10.0"

[dependencies.honggfuzz]
version = "0.5.47"

[dependencies.afl]
version = "0.6.0"
