[package]
name = "crunch-fuzzing"
version = "0.0.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]

[[bin]]
name = "parser"
path = "src/parse.rs"

[dependencies.crunch-parser]
path = "../crates/crunch-parser"

[dependencies.parking_lot]
version = "0.10.0"

[dependencies.honggfuzz]
version = "0.5.47"
