[package]
name = "compactor"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
edition = "2018"

[features]
default = ["runtime"]
runtime = ["std"]
dll-ffi = ["dlopen"]
std = []

[dependencies.crunch-error]
path = "../crunch-error"

# [dependencies.ballast]
# path = "../ballast"

[dependencies.dlopen]
version = "0.1.8"
optional = true

[dependencies.array-init]
version = "0.1.1"

[dependencies.num-bigint]
# version = "0.2.6"
git = "https://github.com/rust-num/num-bigint.git"
rev = "75c3e071bd826d51962c20b752fb710c77570c2d"
default-features = false

[dev-dependencies.proptest]
version = "0.9.5"
