[package]
name = "compiler-pipeline"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
edition = "2018"

[[bin]]
name = "pipeline"
path = "src/bin.rs"

[dependencies.crunch-parser]
path = "../crunch-parser"

[dependencies.crunch-error]
path = "../crunch-error"

[dependencies.num_cpus]
version = "1.12.0"

[dependencies.pipeline-job]
path = "../pipeline-job"
