[package]
name = "crunch-codegen"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

[dependencies.llvm-sys]
version = "100.0.1"

[dependencies.typenum]
version = "1.12.0"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.crunch-mir]
path = "../crunch-mir"

[dev-dependencies.tempfile]
version = "3.1.0"
default-features = false
