[package]
name = "crunch-database"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
edition = "2018"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.crunch-parser]
path = "../crunch-parser"

[dependencies.crunch-typecheck]
path = "../crunch-typecheck"

[dependencies.ladder]
path = "../ladder"
