[package]
name = "crunch-database"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
edition = "2018"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.crunch-parser]
path = "../crunch-parser"

[dependencies.ladder]
path = "../ladder"

[dependencies.crunch-typecheck]
path = "../crunch-typecheck"

[dependencies.crunch-mir]
path = "../crunch-mir"

[dependencies.crunch-codegen]
path = "../crunch-codegen"
