[package]
name = "crunch-driver"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Zlib"
edition = "2018"
default-run = "crunchc"

[[bin]]
name = "crunchc"
path = "src/main.rs"

[dependencies.simplelog]
version = "0.8.0"

[dependencies.log]
version = "0.4.11"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.crunch-database]
path = "../crunch-database"

[dependencies.crunch-codegen]
path = "../crunch-codegen"

[dev-dependencies.goldentests]
version = "0.3.5"
