[package]
name = "crunch-driver"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
default-run = "crunchc"

[[bin]]
name = "crunchc"
path = "src/main.rs"

[dependencies.env_logger]
version = "0.7.1"
default-features = false
features = ["termcolor"]

[dependencies.log]
version = "0.4.11"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.crunch-database]
path = "../crunch-database"

[dependencies.crunch-codegen]
path = "../crunch-codegen"

[dev-dependencies.goldentests]
version = "0.3.6"
