[package]
name = "crunch-parser"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Zlib"
edition = "2018"

[[bin]]
name = "crunch-parser"

[features]
default = ["concurrent"]
no-std = ["hashbrown", "dashmap/no_std"]
logging = ["log"]
concurrent = ["dashmap", "lasso/multi-threaded"]

# Lexing
[dependencies.logos]
version = "0.11.4"

# Hex float parsing
[dependencies.hexponent]
version = "0.3.0"
default-features = false

[dependencies.lexical-core]
version = "0.7.4"

# no_std hashmap
[dependencies.hashbrown]
version = "0.7.2"
optional = true

# Concurrent hashmap for symbol table
[dependencies.dashmap]
version = "3.11.1"
optional = true

# Pretty error reporting
[dependencies.codespan-reporting]
version = "0.9.3"

# NFKC Normalization
[dependencies.unicode-normalization]
version = "0.1.12"

# Easier conditional compilation
[dependencies.cfg-if]
version = "0.1.10"

# Logging
[dependencies.log]
version = "0.4.8"
optional = true

# Error enum display impl generation
[dependencies.derive_more]
version = "0.99.5"

# Arena allocation
[dependencies.stadium]
git = "https://github.com/Kixiron/stadium.git"

# String interning
[dependencies.lasso]
git = "https://github.com/Kixiron/lasso.git"

# Logging during tests
[dev-dependencies.simple_logger]
version = "1.6.0"
default-features = false

[dev-dependencies.proptest]
version = "0.9.6"
