[package]
name = "crunch-parser"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Zlib"
edition = "2018"

[[bin]]
name = "crunch-parser"

[features]
default = ["concurrent"]
no-std = ["crunch-shared/no-std"]
logging = ["crunch-shared/logging"]
concurrent = ["crunch-shared/concurrent"]

# Lexing
[dependencies.logos]
version = "0.11.4"

# Integer parsing
[dependencies.lexical-core]
version = "0.7.4"
features = ["radix"]

# NFKC Normalization
[dependencies.unicode-normalization]
version = "0.1.12"

# Abstract Syntax Tree and Errors
[dependencies.crunch-shared]
path = "../crunch-shared"

# Tracking stack frames
[dependencies.crunch-proc]
path = "../crunch-proc"

[dev-dependencies.ron]
version = "0.6.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.proptest]
version = "0.10.0"
