[package]
name = "crunch-parser"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Apache-2.0 OR MIT"
edition = "2018"

# Lexing
[dependencies.logos]
version = "0.11.4"
default-features = false
features = ["export_derive"]

# Integer parsing
[dependencies.lexical-core]
version = "0.7.4"
default-features = false
features = ["radix", "ryu", "format", "std"]

# NFKC Normalization
[dependencies.unicode-normalization]
version = "0.1.13"
default-features = false

# Abstract Syntax Tree and Errors
[dependencies.crunch-shared]
path = "../crunch-shared"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies.proptest]
version = "0.10.0"
