[package]
name = "crunch-proc"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0.34"
default-features = false
features = ["full"]

[dependencies.quote]
version = "1.0.7"
default-features = false

[dependencies.proc-macro2]
version = "1.0.18"
default-features = false

# TODO: Replace with something *much* lighter
# [dependencies.serde_dhall]
# version = "0.5.3"
# default-features = false

# [dependencies.serde]
# version = "1.0.114"
# features = ["derive"]
