[package]
name = "crunch-proc"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies.syn]
version = "1.0.35"
default-features = false
features = ["full"]

[dependencies.quote]
version = "1.0.7"
default-features = false

[dependencies.proc-macro2]
version = "1.0.19"
default-features = false

[dependencies.toml]
version = "0.5.6"
default-features = false

[dependencies.serde]
version = "1.0.114"
features = ["derive"]
