[package]
name = "crunch-shared"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "Zlib"
edition = "2018"

[features]
default = []
concurrent = ["lasso/multi-threaded"]
no-std = ["hashbrown", "lasso/no-std"]
logging = ["log"]

[dependencies.hashbrown]
version = "0.8.0"
optional = true

[dependencies.log]
version = "0.4.8"
optional = true

[dependencies.serde]
version = "1.0.114"
features = ["derive"]

[dependencies.derive_more]
version = "0.99.9"

[dependencies.codespan-reporting]
version = "0.9.5"

[dependencies.lasso]
git = "https://github.com/Kixiron/lasso.git"
features = ["serialize"]

[dependencies.crunch-proc]
path = "../crunch-proc"
