[package]
name = "crunch-shared"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
build = "build.rs"

[features]
default = []
concurrent = ["lasso/multi-threaded"]
no-std = ["hashbrown", "lasso/no-std"]

[dependencies.hashbrown]
version = "0.8.2"
optional = true
default-features = false

[dependencies.tracing]
version = "0.1.19"
default-features = false
features = [
    "std",
    "attributes",
    "max_level_trace", # Trace is the lowest log level compiled for debug
    "release_max_level_info", # Info is the lowest log level compiled for release
]

[dependencies.serde]
version = "1.0.115"
features = ["derive"]
default-features = false

[dependencies.derive_more]
version = "0.99.9"
features = ["display"]
default-features = false

[dependencies.codespan-reporting]
version = "0.9.5"
default-features = false

[dependencies.pretty]
version = "0.10.0"
default-features = false

[dependencies.salsa]
version = "0.15.2"
default-features = false

[dependencies.structopt]
version = "0.3.16"
default-features = false

[dependencies.lasso]
git = "https://github.com/Kixiron/lasso.git"
default-features = false
features = ["serialize"]

[dependencies.fxhash]
version = "0.2.1"
default-features = false

[dependencies.cfg-if]
version = "0.1.10"
default-features = false

[dependencies.typed-arena]
version = "2.0.1"

[dependencies.stats_alloc]
version = "0.1.8"

[dependencies.inventory]
version = "0.1.9"

[dependencies.crunch-proc]
path = "../crunch-proc"

[build-dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock"]
