[package]
name = "crunch-typecheck"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Zlib"
edition = "2018"

[dependencies.crunch-shared]
path = "../crunch-shared"
features = ["logging"]

[dev-dependencies.crunch-parser]
path = "../crunch-parser"

[dev-dependencies.ladder]
path = "../ladder"

[dev-dependencies.simple_logger]
version = "1.6.0"
