[package]
name = "crunch-typecheck"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Apache-2.0 OR MIT"
edition = "2018"
build = "build.rs"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.ladder]
path = "../ladder"

[dependencies.typecheck]
path = "typecheck_ddlog"

[dependencies.differential_datalog]
path = "typecheck_ddlog/differential_datalog"
