[package]
name = "driver"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
license = "Zlib"
edition = "2018"
default-run = "crunchc"

[[bin]]
name = "crunchc"
path = "src/main.rs"

[dependencies.structopt]
version = "0.3.15"
default-features = false

[dependencies.env_logger]
version = "0.7.1"

[dependencies.log]
version = "0.4.11"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.crunch-database]
path = "../crunch-database"

[dependencies.crunch-parser]
path = "../crunch-parser"

[dependencies.ladder]
path = "../ladder"

[dependencies.crunch-typecheck]
path = "../crunch-typecheck"

[dependencies.crunch-mir]
path = "../crunch-mir"

[dependencies.crunch-codegen]
path = "../crunch-codegen"

[dev-dependencies.goldentests]
version = "0.3.4"
