[package]
name = "repl"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
edition = "2018"

[dependencies.crunch-parser]
path = "../crunch-parser"
features = ["logging"]

[dependencies.rustyline]
version = "6.1.1"

[dependencies.rustyline-derive]
version = "0.3.1"

[dependencies.simple_logger]
version = "1.6.0"
