[package]
name = "repl"
version = "0.1.0"
authors = ["Chase Wilson <me@chasewilson.dev>"]
repository = "https://github.com/Kixiron/crunch-lang"
license = "Zlib"
edition = "2018"

[dependencies.crunch-parser]
path = "../crunch-parser"

[dependencies.crunch-shared]
path = "../crunch-shared"

[dependencies.ladder]
path = "../ladder"

[dependencies.crunch-typecheck]
path = "../crunch-typecheck"

[dependencies.rustyline]
version = "6.2.0"
default-features = false

[dependencies.rustyline-derive]
version = "0.3.1"
default-features = false
