[package]
name = "vice"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
edition = "2018"

[dependencies.crunch-error]
path = "../crunch-error"

[dependencies.crunch-parser]
path = "../crunch-parser"

[dependencies.crunch-bytecode]
path = "../crunch-bytecode"

[dependencies.compactor]
path = "../compactor"

[dependencies.phf]
version = "0.8"
default-features = false # `no_std` support
features = ["macros"]

[dev-dependencies.simple_logger]
version = "1.6.0"
default-features = false
